--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.16.1",
+    "dotenv": "^16.4.5",
+    "flowbite-react": "^0.8.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.365.0",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
