--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.365.0",
     "mongoose": "^8.3.1",
-    "next": "14.0.4",
+    "next": "^14.1.4",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
